fix: Corrige comando de start no nixpacks.toml - Usa find para localizar JAR automaticamente - Resolve erro target/*.jar não encontrado

--- a/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
+++ b/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ['...', 'maven']
 cmds = ['./mvnw clean package -DskipTests -Dmaven.repo.local=/tmp/m2']
 
 [phases.start]
-cmd = 'java -Dspring.profiles.active=railway -jar target/*.jar'
+cmd = 'find target -name "*.jar" -exec java -Dspring.profiles.active=railway -jar {} \;'
 
 [variables]
 MAVEN_OPTS = '-Xmx1024m' 
