--- a/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
+++ b/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['...', 'maven']
 
 [phases.build]
-cmds = ['./mvnw clean package -DskipTests -Dmaven.repo.local=/tmp/m2']
+cmds = ['mvn clean package -DskipTests -Dmaven.repo.local=/tmp/m2']
 
 [phases.start]
 cmd = 'find target -name "*.jar" -exec java -Dspring.profiles.active=railway -jar {} \;'
