Fix: Atualizar configurações do Railway para usar mvn global - Remove parâmetro maven.repo.local do nixpacks.toml - Adiciona step compile explícito no railway.json - Força Railway a usar Maven global em vez do wrapper

--- a/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
+++ b/ubuntu/fittrack_final/backend/backend_app/app/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['...', 'maven']
 
 [phases.build]
-cmds = ['mvn clean package -DskipTests -Dmaven.repo.local=/tmp/m2']
+cmds = ['mvn clean package -DskipTests']
 
 [phases.start]
 cmd = 'find target -name "*.jar" -exec java -Dspring.profiles.active=railway -jar {} \;'
