Fix: Configurar conexão PostgreSQL com variáveis individuais do Railway - Usar PGHOST, PGPORT, PGDATABASE, PGUSER, PGPASSWORD - Adicionar create-drop para criação automática de tabelas - Resolver erro de conexão com banco de dados

--- a/ubuntu/fittrack_final/backend/backend_app/app/src/main/resources/application-railway.properties
+++ b/ubuntu/fittrack_final/backend/backend_app/app/src/main/resources/application-railway.properties
@@ -5,19 +5,23 @@ spring.application.name=saga-app
 server.port=${PORT:8080}
 
 # ========================
-# RAILWAY POSTGRES (Railway fornece essas variáveis automaticamente)
+# RAILWAY POSTGRES (Usando variáveis individuais)
 # ========================
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:saga}?sslmode=require
+spring.datasource.username=${PGUSER:saga}
+spring.datasource.password=${PGPASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ========================
 # JPA / HIBERNATE - PRODUÇÃO
 # ========================
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # ========================
 # POOL DE CONEXÕES - OTIMIZADO PARA RAILWAY
