--- a/SAGA-Mobile/eas.json
+++ b/SAGA-Mobile/eas.json
@@ -1,65 +1,44 @@
 {
   "cli": {
-    "version": ">= 3.0.0"
+    "version": ">= 5.4.0"
   },
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "ios": {
-        "simulator": true,
-        "buildConfiguration": "Debug"
-      },
       "android": {
-        "buildType": "apk",
         "gradleCommand": ":app:assembleDebug"
+      },
+      "ios": {
+        "buildConfiguration": "Debug"
       }
     },
     "preview": {
       "distribution": "internal",
-      "ios": {
-        "buildConfiguration": "Release",
-        "simulator": false
-      },
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "apk"
       }
     },
     "production": {
-      "ios": {
-        "buildConfiguration": "Release",
-        "simulator": false,
-        "autoIncrement": "buildNumber"
-      },
+      "autoIncrement": true,
       "android": {
-        "buildType": "aab",
-        "gradleCommand": ":app:bundleRelease",
-        "autoIncrement": "versionCode"
+        "buildType": "app-bundle"
+      },
+      "ios": {
+        "buildConfiguration": "Release"
       }
     }
   },
   "submit": {
     "production": {
-      "ios": {
-        "appleId": "your-apple-id@email.com",
-        "ascAppId": "your-app-store-connect-app-id",
-        "appleTeamId": "your-apple-team-id"
-      },
-      "android": {
-        "serviceAccountKeyPath": "./google-service-account.json",
-        "track": "production"
-      }
-    },
-    "preview": {
-      "ios": {
-        "appleId": "your-apple-id@email.com",
-        "ascAppId": "your-app-store-connect-app-id",
-        "appleTeamId": "your-apple-team-id"
-      },
       "android": {
         "serviceAccountKeyPath": "./google-service-account.json",
         "track": "internal"
+      },
+      "ios": {
+        "appleId": "your.apple.id@email.com",
+        "ascAppId": "1234567890",
+        "appleTeamId": "XXXXXXXXXX"
       }
     }
   }
