--- a/SAGA-Mobile/app.json
+++ b/SAGA-Mobile/app.json
@@ -2,51 +2,64 @@
   "expo": {
     "name": "SAGA Fitness",
     "slug": "saga-fitness",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#6366f1"
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.saga.fitness",
+      "bundleIdentifier": "com.sagafitness.app",
       "buildNumber": "1",
       "infoPlist": {
-        "NSCameraUsageDescription": "SAGA usa a câmera para análise de movimento e progresso visual dos exercícios.",
-        "NSMicrophoneUsageDescription": "SAGA usa o microfone para comandos de voz durante os treinos.",
-        "NSLocationWhenInUseUsageDescription": "SAGA usa sua localização para encontrar academias próximas e trilhas de corrida.",
-        "NSHealthShareUsageDescription": "SAGA compartilha dados de saúde para integração com Apple Health e melhor acompanhamento do seu progresso.",
-        "NSHealthUpdateUsageDescription": "SAGA atualiza dados de saúde para manter seu progresso sincronizado com Apple Health.",
-        "NSMotionUsageDescription": "SAGA usa sensores de movimento para contar passos e detectar atividades físicas automaticamente."
+        "NSCameraUsageDescription": "SAGA Fitness usa a câmera para análise de movimentos do AI Coach",
+        "NSMicrophoneUsageDescription": "SAGA Fitness usa o microfone para comandos de voz durante treinos",
+        "NSLocationWhenInUseUsageDescription": "SAGA Fitness usa localização para encontrar academias próximas",
+        "NSPhotoLibraryUsageDescription": "SAGA Fitness acessa suas fotos para compartilhar progresso"
       },
-      "config": {
-        "usesNonExemptEncryption": false
-      }
+      "associatedDomains": [
+        "applinks:sagafitness.com",
+        "applinks:www.sagafitness.com"
+      ]
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#6366f1"
+        "backgroundColor": "#FFFFFF"
       },
-      "package": "com.saga.fitness",
+      "package": "com.sagafitness.app",
       "versionCode": 1,
       "permissions": [
         "CAMERA",
         "RECORD_AUDIO",
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION",
-        "ACTIVITY_RECOGNITION",
-        "BODY_SENSORS",
-        "VIBRATE",
-        "RECEIVE_BOOT_COMPLETED",
-        "WAKE_LOCK"
+        "WRITE_EXTERNAL_STORAGE",
+        "READ_EXTERNAL_STORAGE"
+      ],
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "sagafitness.com"
+            },
+            {
+              "scheme": "https", 
+              "host": "www.sagafitness.com"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
       ]
     },
     "web": {
@@ -54,39 +67,44 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-notifications",
-      "expo-location",
-      "expo-camera",
-      "expo-av",
-      "expo-secure-store",
+      "expo-router",
       [
-        "expo-build-properties",
+        "expo-notifications",
         {
-          "ios": {
-            "deploymentTarget": "13.0"
-          },
-          "android": {
-            "compileSdkVersion": 34,
-            "targetSdkVersion": 34,
-            "minSdkVersion": 21
-          }
+          "icon": "./assets/notification-icon.png",
+          "color": "#ffffff",
+          "sounds": ["./assets/notification.wav"]
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "SAGA Fitness usa a câmera para análise de movimentos."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "SAGA Fitness usa localização para encontrar academias próximas."
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "SAGA Fitness acessa suas fotos para compartilhar progresso.",
+          "savePhotosPermission": "SAGA Fitness salva fotos do seu progresso."
         }
       ]
     ],
+    "scheme": "sagafitness",
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
-        "projectId": "your-project-id-here"
+        "projectId": "your-expo-project-id"
       }
     },
-    "owner": "saga-team",
-    "privacy": "public",
-    "scheme": "saga-fitness",
-    "notification": {
-      "icon": "./assets/notification-icon.png",
-      "color": "#6366f1",
-      "iosDisplayInForeground": true,
-      "androidMode": "default",
-      "androidCollapsedTitle": "SAGA Fitness"
-    }
+    "owner": "saga-fitness"
   }
 }
